# PROGR.LOG.FUNC_Juan-Vazquez-Paniagua

./: CalculadoraCientifica.hs  CalificacionAlumno.hs  Ejercicios en haskell  FuncionBooleana.hs  FuncionFrace.hs  FuncionLista.hs  IVA.hs  ListaCalificaciones.hs  MatematicasEjemplos.hs  ModuloVector.hs  UnaInmobiliaria.hs  ValoresAtipicos.hs  ejercicios.hs  kataFizzBuzz.hs  swish.pl
FizzBuzz/dist-newstyle/cache/: config  elaborated-plan  source-hashes
FizzBuzz/dist-newstyle/packagedb/ghc-9.4.8/: package.cache
FizzBuzz/src/: FizzBuzz.hs
FizzBuzz/test/: Tests.hs
Katas/Bowling/: Bowling.cabal
Katas/Bowling/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Katas/Bowling/dist-newstyle/packagedb/ghc-9.4.8/: Bowling-0.1.0.0-inplace.conf  package.cache
Katas/Bowling/src/: Bowling.hs
Katas/Bowling/test/: Tests.hs
Katas/FizzBuzz/: FizzBuzz.cabal
Katas/FizzBuzz/dist-newstyle/cache/: compiler  config  improved-plan  plan.json  solver-plan
Katas/FizzBuzz/dist-newstyle/packagedb/ghc-9.4.8/: FizzBuzz-0.1.0.0-inplace.conf
Katas/FizzBuzz/src/: FizzBuzz.hs
Katas/FizzBuzz/test/: Tests.hs
Sistema-Experto-Yerberito/: Data.pl  Interfaz.pl  rules.pl
